; ModuleID = '/home/carl/AnghaBench/vlc/modules/access/http/extr_resource.c_vlc_http_res_get_basic_realm.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/access/http/extr_resource.c_vlc_http_res_get_basic_realm.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vlc_http_resource = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @vlc_http_res_get_basic_realm(%struct.vlc_http_resource* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.vlc_http_resource*, align 8
  %4 = alloca i32, align 4
  store %struct.vlc_http_resource* %0, %struct.vlc_http_resource** %3, align 8
  %5 = load %struct.vlc_http_resource*, %struct.vlc_http_resource** %3, align 8
  %6 = call i32 @vlc_http_res_get_status(%struct.vlc_http_resource* %5)
  store i32 %6, i32* %4, align 4
  %7 = load i32, i32* %4, align 4
  %8 = icmp ne i32 %7, 401
  br i1 %8, label %9, label %10

9:                                                ; preds = %1
  store i8* null, i8** %2, align 8
  br label %15

10:                                               ; preds = %1
  %11 = load %struct.vlc_http_resource*, %struct.vlc_http_resource** %3, align 8
  %12 = getelementptr inbounds %struct.vlc_http_resource, %struct.vlc_http_resource* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i8* @vlc_http_msg_get_basic_realm(i32 %13)
  store i8* %14, i8** %2, align 8
  br label %15

15:                                               ; preds = %10, %9
  %16 = load i8*, i8** %2, align 8
  ret i8* %16
}

declare dso_local i32 @vlc_http_res_get_status(%struct.vlc_http_resource*) #1

declare dso_local i8* @vlc_http_msg_get_basic_realm(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
